.metadata/.plugins/org.eclipse.cdt.ui/ObstacleAvoidRobot.build.log
09:50:34 **** Build of configuration Debug for project ObstacleAvoidRobot ****
make all 
Building file: ../src/LocalizationManager.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/LocalizationManager.d" -MT"src/LocalizationManager.o" -o "src/LocalizationManager.o" "../src/LocalizationManager.cpp"
In file included from ../src/Particle.h:6:0,
                 from ../src/LocalizationManager.h:5,
                 from ../src/LocalizationManager.cpp:1:
../src/Node.h:56:9: warning: extra tokens at end of #endif directive [enabled by default]
 #endif  NODE_H_
         ^
In file included from ../src/LocalizationManager.h:5:0,
                 from ../src/LocalizationManager.cpp:1:
../src/Particle.h:25:9: warning: extra tokens at end of #endif directive [enabled by default]
 #endif  PATHPLANNER_H_
         ^
In file included from ../src/LocalizationManager.h:5:0,
                 from ../src/LocalizationManager.cpp:1:
../src/Particle.h:14:32: error: ‘cv’ has not been declared
  void initializeHuristicValues(cv::Mat* map, Node* goalNode);
                                ^
../src/Particle.h:14:39: error: expected ‘,’ or ‘...’ before ‘*’ token
  void initializeHuristicValues(cv::Mat* map, Node* goalNode);
                                       ^
../src/Particle.h:16:23: error: ‘cv’ has not been declared
  void handleNeighbors(cv::Mat* map, Node* currNode, Node* goalNode,
                       ^
../src/Particle.h:16:30: error: expected ‘,’ or ‘...’ before ‘*’ token
  void handleNeighbors(cv::Mat* map, Node* currNode, Node* goalNode,
                              ^
../src/Particle.h:18:24: error: ‘cv’ has not been declared
  void findShortestPath(cv::Mat* map, Node* startNode, Node* goalNode);
                        ^
../src/Particle.h:18:31: error: expected ‘,’ or ‘...’ before ‘*’ token
  void findShortestPath(cv::Mat* map, Node* startNode, Node* goalNode);
                               ^
In file included from ../src/LocalizationManager.cpp:1:0:
../src/LocalizationManager.h:25:9: error: ‘Particle’ was not declared in this scope
  vector<Particle *> particles;
         ^
../src/LocalizationManager.h:25:19: error: template argument 1 is invalid
  vector<Particle *> particles;
                   ^
../src/LocalizationManager.h:25:19: error: template argument 2 is invalid
../src/LocalizationManager.h:29:36: error: ‘Particle’ has not been declared
  bool returnBackOutOfRangeParticle(Particle *particle);
                                    ^
../src/LocalizationManager.h:32:22: error: ‘Particle’ has not been declared
  double updateBelief(Particle *particle);
                      ^
../src/LocalizationManager.h:35:28: error: ‘Particle’ has not been declared
  void createRandomParticle(Particle *particle);
                            ^
../src/LocalizationManager.h:38:32: error: ‘Particle’ has not been declared
  void createNeighborParticales(Particle *prevP,  Particle *newP);
                                ^
../src/LocalizationManager.h:38:50: error: ‘Particle’ has not been declared
  void createNeighborParticales(Particle *prevP,  Particle *newP);
                                                  ^
../src/LocalizationManager.h:50:9: error: ‘Particle’ was not declared in this scope
  vector<Particle *> getParticles() const;
         ^
../src/LocalizationManager.h:50:19: error: template argument 1 is invalid
  vector<Particle *> getParticles() const;
                   ^
../src/LocalizationManager.h:50:19: error: template argument 2 is invalid
../src/LocalizationManager.cpp:13:48: error: variable or field ‘createRandomParticle’ declared void
 void LocalizationManager::createRandomParticle(Particle *par) {
                                                ^
../src/LocalizationManager.cpp:13:48: error: ‘Particle’ was not declared in this scope
../src/LocalizationManager.cpp:13:58: error: ‘par’ was not declared in this scope
 void LocalizationManager::createRandomParticle(Particle *par) {
                                                          ^
make: *** [src/LocalizationManager.o] Error 1

09:50:37 Build Finished (took 3s.37ms)

